--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/tm2pVYK/logo.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.ibb.co/tm2pVYK/logo.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Funedutoys</title>
+   
+      <title>Funedutoys</title>
+
   </head>
   <body>
     <div id="root"></div>
